Set colors for check buttons (since they're effectively labels). Change the background of the CTabFolder to be a plain color to avoid strange bleed-through around the min/max buttons.

--- a/examples/org.eclipse.e4.demo.contacts/css/blue-gradient.css
+++ b/examples/org.eclipse.e4.demo.contacts/css/blue-gradient.css
@@ -10,7 +10,7 @@
  *     Kai Tödter - initial implementation
  ******************************************************************************/
 
-Label {
+Label, Button[style~='SWT.CHECK'] {
 	font: Verdana 8px;
 	color: black;
 }
@@ -54,6 +54,17 @@ Table {
 
 ETabFolder {
 	simple: true;
+}
+
+CTabFolder {
+	/* The tab rendering background for the min/max toolbar pulls 
+	 * background from the tabfolder's background (or it's parent?)
+	 * and so the gradient doesn't come through. So just set the
+	 * tabfolder's background to a color */
+	/*background-color: #e3efff #c1d5ef;*/
+	background-color: #c1d5ef;
+	color: white;
+	simple: true;	
 }
 
 CTabItem {
